src/zmi/styles/resources/zmi_base.css
/* FONTAWESOME 5+ */
@import "fontawesome-free-5.1.0/css/fontawesome.css";

/* ZOPE 4 Base Styles */

@media (max-width: 576px) {
	.hidden-xs {
		display:none;
	}
}

.zmi:not(.zmi-manage_menu) main,
.zmi main.container-fluid {
	width: 100%;
	padding-right: 1rem;
	padding-left: 1rem;
	margin-right: auto;
	margin-left: auto;
}
.alert {
	margin: 0 1rem 1rem;
}
main.container-fluid .alert {
	margin: 0 0 1rem;
}

/* BUTTONS / CONTROLS */

a {
	color:#6c757d;
}
a:hover {
	text-decoration: none;
}

::placeholder{
	color:rgba(108, 117, 125, .5) !important;
}
:-ms-input-placeholder {
	color:rgba(108, 117, 125, .5) !important;
}
::-ms-input-placeholder {
	color:rgba(108, 117, 125, .5) !important;
}

.zmi a.btn.btn-primary, 
.zmi input.btn.btn-primary {
	background-color:white !important;
	color:#6c757d;
	border-color:#6c757d;
	min-width: 7em;
}
.h2, h2 {
	font-size: 1.5rem;
	margin: 2rem 0 1rem;
}
.h3, h3 {
	font-size: 1.25rem;
	margin: 2rem 0 .5rem;
}

input.btn.btn-primary:hover {
	background-color:#e9ecef !important;
}

.zmi {
	background-color:#fcfcfc;
}
.zmi nav[role="navigation"] {
	background-color:#fff;
	padding-top:.8rem;
}
.zmi nav[role="navigation"] ul.nav.nav-tabs {
	width:100% !important;
	min-width: max-content;
}
.zmi nav .nav-tabs .nav-item .nav-link {
	padding: .33rem 1em .33rem 1rem;
	min-width: 5em;
	text-align: center;
}
.zmi nav .nav-tabs .nav-link.active {
	background-color:#fcfcfc;
	border-color: #dee2e6 #dee2e6 #fcfcfc;
	font-weight:bold;
	color: #6c757d !important;
}
.zmi-controls {
	margin-top:1.75rem
}
.zmi-controls > * {
	margin-right:.5rem;
	margin-bottom:.6rem;
	min-width: 7em;
}

form.zmi-upload {
	margin: 0 -15px;
	padding: 2.15rem 15px;
	border-top: #ced4da solid 1px;
}
.zmi p.form-help {
	margin-bottom:2rem;
}


/* TAB NAVIGATION */
.zmi nav .nav-tabs .nav-item:first-child {
	margin-left: 1em;
}
.zmi nav .nav-tabs .nav-item a {
	padding-left:1em;
	padding-right:1em;
}
.zmi nav .nav-tabs .nav-item a {
	padding-left:1em;
	padding-right:1em;
	padding-top:.45rem
}


/* BREADCRUMB NAV */

/* Remove default delimiter */
.breadcrumb .breadcrumb-item+.breadcrumb-item::before {
	content: none;
}
.zmi .breadcrumb {
	background:none !important;
	margin-bottom:0.85rem;
}
.zmi .breadcrumb li.breadcrumb-item {
	padding: 0 .2rem;
	height:1.75rem;
}
.zmi .breadcrumb li.breadcrumb-item.meta_type {
	padding-left:	0;
}
.zmi .breadcrumb li.breadcrumb-item.meta_type:after {
	content:'at';
	margin-left:.35rem;
	font-style:italic;
}

.zmi .breadcrumb li.breadcrumb-item,
.zmi .breadcrumb li.breadcrumb-item.meta_type:hover{
	border:1px solid transparent;
}
.zmi .breadcrumb li.breadcrumb-item:hover {
	border:1px solid #e0e0e0;
}
.zmi .breadcrumb .breadcrumb-item a:hover {
	color: #007bff !important;
}

/* MAIN / OBJECTLIST */

.zmi table.objectItems td {
	line-height:1.7rem;
}
.zmi table.objectItems .zmi-object-check {
	padding-left:1rem;
	max-width:2rem;
}
.zmi table.objectItems th.zmi-object-id {
	width:100%;
} 
.zmi table.objectItems tbody .zmi-object-id {
	font-weight: 600;
}
.zmi table.objectItems .zmi-object-id #tablefilter {
	padding:0 1.5em;
	background:none;
	border:none;
	box-shadow:none;
	border-radius:3px;
	height:1.3rem;
	width:10rem;
	max-width:50%;
}
.zmi table.objectItems .zmi-object-id #tablefilter:focus {
	outline-color: transparent;
	border-radius: 3px;
	background-color: #dadee3;
}
.zmi table.objectItems .zmi-object-id .fa-search.tablefilter {
	margin:0 -1.5rem 0 0.5rem;
	opacity:.3;
	font-size:90%;
	cursor:pointer;
}
.zmi table.objectItems .zmi-object-title {
	font-weight: 400;
	opacity:.5;
	position: absolute;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
	max-width: 60%;
	padding-left: .25em;
}
.zmi table.objectItems .zmi-object-type {
	max-width:3rem;
	min-width:2rem;
	text-align:center;
}
.zmi table.objectItems td.zmi-object-type {
	font-size:1.1rem;
}
.zmi table.objectItems td.zmi-object-type .fa.fa-terminal {
	font-size:smaller;
}
.zmi table.objectItems .zmi-object-check,
.zmi table.objectItems .zmi-object-check input,
.zmi table.objectItems .zmi-object-type{
	cursor:pointer;
}
.zmi table.objectItems td.zmi-object-id span.zmi-typename_show {
	width:180px;
	font-weight:normal;
	display:inline-block;
	font-size:small;
	font-style: italic;
}
.zmi table.objectItems th.zmi-object-id.zmi-typename_show {
	padding-left:190px;
}
.zmi table.objectItems .zmi-object-date,
.zmi table.objectItems .zmi-object-size {
	white-space:nowrap;
}
.zmi table.objectItems tr.checked {
	background-color:#007bff1c !important;
}
.zmi form[name="objectItems"] div.zmi-controls.row span {
    padding: .375rem .25rem;
    min-width: initial;
}


/* Table Object-Items: Sorting Links*/

.zmi table.objectItems th a i {
	margin-left:.2rem;
	color:transparent;
}
.zmi table.objectItems thead.sorted_desc th a,
.zmi table.objectItems thead.sorted_asc th a,
.zmi table.objectItems th.zmi-object-type a i {
	color:#bbb;
}
.zmi table.objectItems th.zmi-object-type a.zmi-sort_key i,
.zmi table.objectItems th a.zmi-sort_key i,
.zmi table.objectItems th a.zmi-sort_key,
.zmi table.objectItems thead.sorted_desc th a.zmi-sort_key,
.zmi table.objectItems thead.sorted_asc th a.zmi-sort_key,
.zmi table.objectItems th a:hover {
	color:black !important;
}
.zmi table.objectItems th a.zmi-sort_key[title*='ASC'] i:before {
	content:"\f0d8";
	color:#dc3545;
}
.zmi table.objectItems th a.zmi-sort_key[title*='DESC'] i:before {
	content:"\f0d7";
	color:#dc3545;
}


.zmi main:not(.zmi-patch) > form > table.table {
	margin: 0 -1rem;
	max-width: calc(100% + 1.9rem);
	width: calc(100% + 1.9rem);
}
.zmi main > form > table.table tr th:last-child,
.zmi main > form > table.table tr td:last-child {
	padding-right:1rem;
}
/* ... */

